<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_3"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_prueba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="8dp"
        android:text="@string/prueba" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="8dp"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/tv_eval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:padding="8dp"
        android:text="@string/evaluaci_n" />

</LinearLayout>